IN DEVELOPMENT ======= 1.2.4-5

- added: controller.cors(allow, method, header, credentials) - return {Boolean}
- added: controller.header(name, value) - set response header

- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/cors
- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/custom-headers

======= 1.2.4-4

- added: partial.js/utils is a global object ... applies everywhere: utils.[method]
- added: partial.js/builders is a global object ... applies everywhere: builders.[method]
- added: auto verifying directories
- added: framework.onCompileCSS(filename, output) :: must return {String} (if is declared then auto-vendor-prefixes and internal LESS CSS are disabled)
- added: framework.onCompileJS(filename, output) :: must return {String} (if is declared then internal JavaScript minificator is disabled)
- added: utils.copy(target, source, rewrite);
- added: Array.where(fn);
- added: Array.randomize();
- added: partial.js/mail attachments
- added: controller.baa() - Basic access authentication (WWW-Authenticate)
- added: controller.isProxy {Boolean};
- added: controller.proxy(url, obj, callback);
- added: controller.error(err);
- added: new route flag: "proxy"
- added: utils.httpStatus(code);

- updated: dynamic compress CSS and JS by the framework.onCompileCSS and framework.onCompileJS in views
- updated: process.name
- updated: empty-project and NPM executable
- updated: expression() - added internal cache
- updated: nosql embedded database (supports stored functions)
- updated: partial.js/mail (complete rewrite module)

- fixed: partial.js/mail SMTP user authorization
- fixed: utils.request();

- removed: partial.js/mail.send()
- removed: utils.loadFromFile()

- clean code

- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/email-send
- NEW EXAMPLE: https://github.com/petersirka/partial.js/tree/master/examples/external-compile-sass